--- a/css/estil.css
+++ b/css/estil.css
@@ -1,5 +1,7 @@
 body {
-  width: 100vw;
+  width: 100%;
+  margin-top: 0px;
+  margin-left: 0px;
   overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #bbdef0; }
@@ -8,7 +10,8 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100vw;
+  height: 100vh;
+  width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
@@ -16,7 +19,12 @@ header {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  text-align: center; }
+  text-align: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-image: url("../img/QuinDombrowski.jpg");
+  background-size: cover; }
   header h1 {
     color: #6c698d; }
   header h2 {
@@ -38,27 +46,77 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -ms-flex-flow: wrap;
+  flex-flow: wrap;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start; }
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
   main article {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
-    justify-content: center; }
+    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 25%; }
+    main article.targeta {
+      background-color: #ecf6fa;
+      padding: 1em 2em;
+      margin-top: 1em;
+      margin-left: 0.5em;
+      margin-right: 0.5em;
+      color: #6c698d;
+      -webkit-box-shadow: #6c698d 0em 0.5em 1em;
+      box-shadow: #6c698d 0em 0.5em 1em; }
     main article h1 {
       color: #6c698d; }
+    main article.container {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+      flex-direction: row; }
+      main article.container section {
+        background-color: #ecf6fa;
+        padding: 1em 2em;
+        margin-top: 1em;
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+        color: #6c698d;
+        -webkit-box-shadow: #6c698d 0em 0.5em 1em;
+        box-shadow: #6c698d 0em 0.5em 1em; }
+    main article.sencer {
+      width: 100%;
+      margin-top: 1em; }
 
 footer {
+  margin-top: 2em;
+  margin-left: 0px;
+  margin-bottom: 0px;
+  padding: 0.1em 0.5em 0.5em 0.5em;
+  font-size: 9px;
   background-color: #17b890; }
 
 /* DESKTOP ONLY*/
+@media only screen and (max-width: 1200px) {
+  main {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start; }
+    main article {
+      width: 25%; } }
+
+@media only screen and (max-width: 900px) {
+  main {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+    main article {
+      width: 100%; } }
