--- a/scss/parcials/_mixins.scss
+++ b/scss/parcials/_mixins.scss
@@ -1,3 +1,12 @@
-@import './parcials/mixins';
 @import './parcials/colors';
 @import './parcials/fonts';
+
+@mixin targeta{
+    background-color: $targetes;
+    padding: 1em 2em;
+    margin-top: 1em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+    color: $principal;
+    box-shadow: $principal 0em 0.5em 1em;
+}
