--- a/css/estil.css
+++ b/css/estil.css
@@ -1,5 +1,6 @@
 body {
   width: 100%;
+  height: 100vh;
   margin-top: 0px;
   margin-left: 0px;
   overflow-x: hidden;
@@ -24,20 +25,31 @@ header {
   -ms-flex-pack: center;
   justify-content: center;
   background-image: url("../img/QuinDombrowski.jpg");
+  -webkit-box-shadow: #6c698d 0em 0.5em 1em;
+  box-shadow: #6c698d 0em 0.5em 1em;
   background-size: cover; }
   header h1 {
-    color: #6c698d; }
+    color: #6c698d;
+    margin-bottom: 0.2em;
+    font-size: 3em;
+    background-color: rgba(255, 255, 255, 0.6);
+    padding: 0.2em 0.5em; }
   header h2 {
-    color: #17b890; }
+    margin-top: 0.2em;
+    margin-bottom: 1em;
+    color: #17b890;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 0.2em 0.5em; }
   header .CTA {
     text-decoration: none;
     color: white;
     background-color: #6c698d;
     padding: 1em 2em;
     border-radius: 14px;
-    -webkit-box-shadow: #17b890 0.1em 0.5em 1em;
-    box-shadow: #17b890 0.1em 0.5em 1em; }
+    -webkit-box-shadow: #17b890 0em 0.3em 0.7em;
+    box-shadow: #17b890 0em 0.3em 0.7em; }
     header .CTA:hover {
+      background-color: #17b890;
       -webkit-box-shadow: #17b890 0em 0em 0.5em;
       box-shadow: #17b890 0em 0em 0.5em; }
 
@@ -48,42 +60,51 @@ main {
   display: flex;
   -ms-flex-flow: wrap;
   flex-flow: wrap;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between; }
-  main article {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  main .wrapper {
+    width: 98%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    width: 25%; }
-    main article.targeta {
-      background-color: #ecf6fa;
-      padding: 1em 2em;
-      margin-top: 1em;
-      margin-left: 0.5em;
-      margin-right: 0.5em;
-      color: #6c698d;
-      -webkit-box-shadow: #6c698d 0em 0.5em 1em;
-      box-shadow: #6c698d 0em 0.5em 1em; }
-    main article h1 {
-      color: #6c698d; }
-    main article.container {
+    margin-top: 2em; }
+    main .wrapper .row {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
       -ms-flex-direction: row;
-      flex-direction: row; }
-      main article.container section {
+      flex-direction: row;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap; }
+    main .wrapper article {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+      flex-grow: 1;
+      max-width: 28%; }
+      main .wrapper article.targeta {
         background-color: #ecf6fa;
         padding: 1em 2em;
         margin-top: 1em;
@@ -92,31 +113,58 @@ main {
         color: #6c698d;
         -webkit-box-shadow: #6c698d 0em 0.5em 1em;
         box-shadow: #6c698d 0em 0.5em 1em; }
-    main article.sencer {
-      width: 100%;
-      margin-top: 1em; }
+      main .wrapper article h1 {
+        color: #6c698d; }
+      main .wrapper article.container {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row; }
+        main .wrapper article.container section {
+          background-color: #ecf6fa;
+          padding: 1em 2em;
+          margin-top: 1em;
+          margin-left: 0.5em;
+          margin-right: 0.5em;
+          color: #6c698d;
+          -webkit-box-shadow: #6c698d 0em 0.5em 1em;
+          box-shadow: #6c698d 0em 0.5em 1em; }
+      main .wrapper article.sencer {
+        width: 100%;
+        margin-top: 1em; }
 
 footer {
-  margin-top: 2em;
+  margin-top: 3em;
   margin-left: 0px;
   margin-bottom: 0px;
-  padding: 0.1em 0.5em 0.5em 0.5em;
+  padding: 0.1em 0.5em 0.5em 1em;
   font-size: 9px;
   background-color: #17b890; }
 
-/* DESKTOP ONLY*/
-@media only screen and (max-width: 1200px) {
-  main {
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start; }
-    main article {
-      width: 25%; } }
-
+/* LIL SCREENS*/
 @media only screen and (max-width: 900px) {
   main {
+    width: 100%;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center; }
-    main article {
-      width: 100%; } }
+    main .wrapper .row {
+      width: 98%;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+    main .wrapper article {
+      width: 90%;
+      max-width: 90%;
+      -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+      flex-grow: 1; } }
