--- a/css/estil.css
+++ b/css/estil.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Oswald:300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Oswald:300,400,700");
 body {
   width: 100%;
   height: 100vh;
@@ -33,16 +35,21 @@ header {
     margin-bottom: 0.2em;
     font-size: 3em;
     background-color: rgba(255, 255, 255, 0.6);
-    padding: 0.2em 0.5em; }
+    padding: 0.2em 0.5em;
+    font-family: 'Oswald', sans-serif; }
   header h2 {
     margin-top: 0.2em;
     margin-bottom: 1em;
     color: #17b890;
     background-color: rgba(255, 255, 255, 0.8);
-    padding: 0.2em 0.5em; }
+    padding: 0.2em 0.5em;
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold; }
   header .CTA {
     text-decoration: none;
     color: white;
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
     background-color: #6c698d;
     padding: 1em 2em;
     border-radius: 14px;
@@ -84,6 +91,7 @@ main {
       -webkit-box-direction: normal;
       -ms-flex-direction: row;
       flex-direction: row;
+      width: 100%;
       -webkit-box-pack: justify;
       -ms-flex-pack: justify;
       justify-content: space-between;
@@ -93,9 +101,12 @@ main {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      justify-content: center;
+      -webkit-box-pack: start;
+      -ms-flex-pack: start;
+      justify-content: flex-start;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -114,7 +125,9 @@ main {
         -webkit-box-shadow: #6c698d 0em 0.5em 1em;
         box-shadow: #6c698d 0em 0.5em 1em; }
       main .wrapper article h1 {
-        color: #6c698d; }
+        color: #6c698d;
+        font-family: 'Oswald', sans-serif;
+        font-weight: bold; }
       main .wrapper article.container {
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
@@ -131,7 +144,70 @@ main {
           box-shadow: #6c698d 0em 0.5em 1em; }
       main .wrapper article.sencer {
         width: 100%;
+        max-width: 100%;
         margin-top: 1em; }
+
+.programa {
+  width: 98%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 1em; }
+  .programa .programacio-container {
+    width: 80%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    background-color: #ecf6fa;
+    padding: 1em 2em;
+    margin-top: 1em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+    color: #6c698d;
+    -webkit-box-shadow: #6c698d 0em 0.5em 1em;
+    box-shadow: #6c698d 0em 0.5em 1em;
+    max-width: 100%; }
+    .programa .programacio-container .programacio-cap h1 {
+      margin-top: 0.2em; }
+    .programa .programacio-container .programacio-cos {
+      width: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      max-width: 100%; }
+      .programa .programacio-container .programacio-cos .setmana {
+        width: 20%;
+        -webkit-box-flex: 2;
+        -ms-flex-positive: 2;
+        flex-grow: 2;
+        margin-left: 1em;
+        margin-right: 1em;
+        margin-bottom: 1em;
+        padding: 0.5em 1em 1em 1em;
+        background-color: #d4faf0; }
+        .programa .programacio-container .programacio-cos .setmana h2 {
+          font-family: 'Oswald', sans-serif;
+          font-size: 1.2em;
+          color: #17b890; }
 
 footer {
   margin-top: 3em;
@@ -163,8 +239,23 @@ footer {
       -ms-flex-wrap: wrap;
       flex-wrap: wrap; }
     main .wrapper article {
-      width: 90%;
       max-width: 90%;
       -webkit-box-flex: 1;
       -ms-flex-positive: 1;
-      flex-grow: 1; } }
+      flex-grow: 1; }
+  .programa {
+    width: 100%; }
+    .programa .programacio-container .programacio-cos {
+      width: 98%;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: start;
+      -ms-flex-pack: start;
+      justify-content: flex-start;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      .programa .programacio-container .programacio-cos .setmana {
+        width: 100%; } }
